--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@
                         </p>
                         <p class="ticket-arqc"><span class="bold-text">Tarjeta:</span> ${ticketResponse.cardMask}</p>
                         <p class="ticket-arqc"><span class="bold-text">Banco:</span> ${ticketResponse.cardIssuerBank}</p>
+                        <p class="ticket-arqc"><span class="bold-text">Detalles:</span> ${ticketResponse.additionalData}</p>
+
                         <p class="ticket-amount">TOTAL: <strong>${ticketResponse.amount.toFixed(2)}</strong></p>
                     `;
 
