--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
             background-color: #3cb371;
         }
     </style>
+
 </head>
 
 <body>
@@ -104,6 +105,7 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <img src="assets/paymind_logo.png" alt="Logo" style="max-width: 100%; display: block; margin: 0 auto;">
 
     <script>
         // URL de la API
