--- a/index.html
+++ b/index.html
@@ -88,7 +88,6 @@
             background-color: #3cb371;
         }
     </style>
-
 </head>
 
 <body>
@@ -96,11 +95,13 @@
     <div id="loading" class="loading">Cargando...</div>
 
 
+
     <div class="total-container">
         <img src="assets/paymind_logo.png" alt="Logo" class="ticket-logo">
+        <p id="ticket-amount" class="ticket-amount-container"> <strong></strong></p>
     </div>
     
-
+    
     <div id="ticket" class="ticket" style="display:none;">
         <h1 id="ticket-header" class="ticket-header"></h1>
         <div id="ticket-body" class="ticket-body"></div>
