--- a/index.html
+++ b/index.html
@@ -160,7 +160,9 @@
 
     <script>
         const apiUrl = "https://api.paymind.mx/transactions-management/tickets/search-by-original-number/";
-        const originalNumber = "21250324155237";
+            const originalNumber = "21250324155237";
+        // const originalNumber = urlParams.get('originalNumber');
+
 
         if (originalNumber) {
             document.getElementById('loading').style.display = 'block';
