--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
 
     <script>
         const apiUrl = "https://api.paymind.mx/transactions-management/tickets/search-by-original-number/";
-            const originalNumber = "21250324155237";
-        // const originalNumber = urlParams.get('originalNumber');
+            // const originalNumber = "21250324155237";
+        const originalNumber = urlParams.get('originalNumber');
 
 
         if (originalNumber) {
