--- a/index.html
+++ b/index.html
@@ -16,12 +16,6 @@
             background-color: #f4f4f4;
         }
 
-        .loading {
-            font-size: 20px;
-            color: #333;
-            text-align: center;
-        }
-
         .ticket {
             background-color: #fff;
             border: 1px solid #c3c1c1;
@@ -31,6 +25,7 @@
             min-height: 400px;
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
+            position: relative;
         }
 
         .ticket-header {
@@ -50,7 +45,6 @@
             color: #333;
             padding-bottom: 10px;
         }
-
 
         .ticket-row {
             display: flex;
@@ -83,10 +77,6 @@
             border-top: 2px solid #ddd;
         }
 
-        .ticket {
-            position: relative;
-        }
-
         .download-btn {
             position: absolute;
             top: 10px;
@@ -99,41 +89,71 @@
             border: none;
             border-radius: 5px;
             transition: 0.3s;
-
         }
-
 
         .ticket-logo {
             position: absolute;
             bottom: 30px;
-            /* Ajusta la distancia desde la parte inferior */
             left: 50%;
             transform: translateX(-50%);
             width: 160px;
             height: auto;
             opacity: 0.6;
-            /* Hace que sea semitransparente */
             z-index: 0;
-            /* La envía al fondo */
         }
 
-        t
-        /* .download-btn {
-            position: absolute;
-            width: auto;
-            margin-top: 20px;
-            padding: 10px;
-            background-color: #2e8b57;
-            color: white;
-            font-size: 14px;
-     
-            border: none;
-            border-radius: 5px;
-            transition: 0.3s;
-        } */
+        /* Estilos para dispositivos móviles */
+        @media (max-width: 768px) {
+            .ticket-header {
+                font-size: 30px;
+            }
 
-        .download-btn:hover {
-            background-color: #14B8A6;
+            .ticket-address {
+                font-size: 14px;
+            }
+
+            .ticket-row {
+                font-size: 14px;
+            }
+
+            .ticket-amount {
+                font-size: 24px;
+            }
+
+            .ticket-logo {
+                width: 120px;
+            }
+
+            .download-btn {
+                font-size: 12px;
+            }
+        }
+
+        /* Estilos para dispositivos muy pequeños */
+        @media (max-width: 480px) {
+            .ticket-header {
+                font-size: 24px;
+            }
+
+            .ticket-address {
+                font-size: 12px;
+            }
+
+            .ticket-row {
+                font-size: 12px;
+            }
+
+            .ticket-amount {
+                font-size: 20px;
+            }
+
+            .ticket-logo {
+                width: 100px;
+            }
+
+            .download-btn {
+                font-size: 10px;
+            }
         }
     </style>
 </head>
