--- a/index.html
+++ b/index.html
@@ -184,12 +184,12 @@
 
     <script>
         // const apiUrl = "http://localhost:8080/tickets/search-by-original-number/";
-        const apiUrl = "https://dev.paymind.mx/transactions-management/tickets/search-by-original-number/";
+        const apiUrl = "https://api.paymind.mx/transactions-management/tickets/search-by-original-number/";
 
 
         const urlParams = new URLSearchParams(window.location.search);
-        // const originalNumber = urlParams.get('originalNumber');
-        const originalNumber = "21250328173509";
+        const originalNumber = urlParams.get('originalNumber');
+        // const originalNumber = "21250328173509";
 
         if (originalNumber) {
             document.getElementById('loading').style.display = 'block';
