--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
 
 
         const urlParams = new URLSearchParams(window.location.search);
-        // const originalNumber = urlParams.get('originalNumber');
-        const originalNumber = "21250407123223";
+        const originalNumber = urlParams.get('originalNumber');
+        // const originalNumber = "21250407123223";
 
         if (originalNumber) {
             document.getElementById('loading').style.display = 'block';
