--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
 
         const urlParams = new URLSearchParams(window.location.search);
-        // const originalNumber = urlParams.get('originalNumber');
+        const originalNumber = urlParams.get('originalNumber');
         // const originalNumber = "21250421110832";
 
         if (originalNumber) {
