--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
               
                         <div class="ticket-amount">TOTAL: $${ticketResponse.amount.toFixed(2)}</div>
-                        <div class="ticket-row"><span class="ticket-label">Afilacion:</span> <span class="ticket-value">9607962</span></div>
+                        <div class="ticket-row"><span class="ticket-label">Afilacion:</span> <span class="ticket-value">${ticketResponse.acquirerId}</span></div>
 
                         <div class="ticket-row"><span class="ticket-label">Aut:</span> <span class="ticket-value">${ticketResponse.authCode}</span></div>
 
